--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,11 @@ anyhow = "1.0"
 clap = { version = "4.5", features = ["derive"] }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 
+[dev-dependencies]
+rcgen = "0.13"
+rustls-pemfile = "2"
+tokio = { version = "1.44", features = ["full"] }
+
 [[bin]]
 name = "proton-cli"
 path = "src/bin/proton-cli.rs"
