--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,11 @@ rcgen = "0.13"
 rustls-pemfile = "2"
 tokio = { version = "1.44", features = ["full"] }
 
+[lints.clippy]
+all = "deny"
+pedantic = "deny"
+nursery = "deny"
+
 [[bin]]
 name = "proton-cli"
 path = "src/bin/proton-cli.rs"
