Use imap-codec for command parsing, add Folder enum
Replace ad-hoc string matching in the fake IMAP server with
imap-codec's CommandCodec for strongly-typed IMAP command dispatch.
Handlers now receive parsed types (SearchKey, SequenceSet, Mailbox)
instead of raw strings, enabling reliable date-range filtering and
easier addition of new query types.

Add a Folder enum (Inbox, Sent, Drafts, Trash, Spam, Archive,
Custom) to replace raw &str folder parameters across the public
API, CLI, and test suite.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ clap = { version = "4.5", features = ["derive"] }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 
 [dev-dependencies]
+imap-codec = "2.0.0-alpha.6"
 rcgen = "0.13"
 rustls-pemfile = "2"
 tokio = { version = "1.44", features = ["full"] }
