--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,13 @@ rust-version = "1.90.0"
 license = "MIT"
 description = "IMAP client library for Proton Mail via Proton Bridge"
 repository = "https://github.com/LeakIX/protonmail-client"
+keywords = ["imap", "email", "protonmail", "proton-bridge"]
+categories = ["email", "network-programming"]
+exclude = [
+    ".github/",
+    "taplo.toml",
+    "tests/",
+]
 
 [dependencies]
 email-extract = "0.1.0"
@@ -28,10 +35,15 @@ thiserror = "2.0"
 tracing = "0.1.40"
 dotenvy = "0.15"
 
-# Binary-only dependencies
-anyhow = "1.0"
-clap = { version = "4.5", features = ["derive"] }
-tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
+# Binary-only dependencies (not required by the library)
+anyhow = { version = "1.0", optional = true }
+clap = { version = "4.5", features = ["derive"], optional = true }
+tracing-subscriber = { version = "0.3.20", features = [
+    "env-filter",
+], optional = true }
+
+[features]
+cli = ["anyhow", "clap", "tracing-subscriber"]
 
 [dev-dependencies]
 imap-codec = "2.0.0-alpha.6"
@@ -47,3 +59,4 @@ nursery = "deny"
 [[bin]]
 name = "proton-cli"
 path = "src/bin/proton-cli.rs"
+required-features = ["cli"]
